--- a/devel/gmake/build
+++ b/devel/gmake/build
@@ -9,7 +9,7 @@ PKGVERSION="3.82"
 
 PKGSRC="make-${PKGVERSION}"
 
-. ../../common/all.subr
+. ../../common/pkgbld.subr
 
 ARCHIVE="${PKGSRC}.tar.bz2"
 ARCHIVE_URL="http://ftp.gnu.org/gnu/make"
